--- a/varJs.html
+++ b/varJs.html
@@ -13,6 +13,26 @@
         var name="ABES";
         console.log(name);
         console.log(typeof (name));
+        // boolean
+        let coursedone = false;
+        console.log(coursedone);
+        console.log(typeof (coursedone));
+        // null
+        let add=null;
+        console.log(add);
+        console.log(typeof (add));
+        
+        let myInfo={
+            name:"Abhay",
+            mobile: 1234567890,
+            isMarried: false,
+            address: null,
+            email: undefined
+
+        }
+        console.log(myInfo);
+        console.log(myInfo.email);
+
     </script>
 </body>
 </html>
